More aesthetic stuff, and trying to fix the "projects"

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,24 +10,27 @@ const pageTitle = 'About Me';
 <Layout>
 
     <body>
-        <div class="about-block">
+        <div style="margin-bottom: 100px;", class="about-block">
             <div><img src={ProfileImage.src} alt="Ruby Mykkanen" class="profile-image"/></div>
             <div>
                 <h1>{pageTitle}</h1>
                 <p>As as student at MIT, my current goal is to learn as much as possible, and gain as much experience as I can. In the long term I hope to have experiences, connections and skills I necessary to build technology that can have a tangible and positive impact on society and human health.</p>
+                <p style="color: #96B098">Read more about me below, or perruse my resume for more information.</p>
+                <button class="resume-button"><a href="/RubyMykkanen_Resume_2024.pdf" class="link" download>Download Resume</a></button>
             </div>
 
         </div>
         <div class = "main-content">
 
             <h2>Academic Interests</h2>
-            <ol>
-                <li><h3>Bioprinting</h3>I’m currently interested in synthetic biology, tissue engineering and bioprinting, particularly the technologies that facilitate this. I think the future of organ transplants is going to be synthetic printed organs, and I can’t wait to help be a part of this process. </li>
+            <ol style="margin-bottom: 100px;">
+                <li><h3>Bioprinting</h3>I am currently interested in synthetic biology, tissue engineering and bioprinting, particularly the technologies that facilitate this. I think the future of organ transplants is going to be synthetic printed organs, and I cannot wait to help be a part of this process. </li>
                 <li><h3>Prosthetics</h3>Another Interest of mine is human prosthetics. I wonder how the areas of bio-printing and tissue engineering can be applied in this area. I see a future where synthetic human tissues can be incorporated into prosthetics to increase their realism, sensitivity and effectiveness.</li>
-                <li><h3>Botany</h3>Finally I have always had a passion for botany, and in recent days I have become enthralled by the process of genetically modifying plants. Though I don’t see any direct human applications from this I’m excited by the do-ability and wonder of genetics. I envision plants that could be more resilient, smell nicer or be more beautiful. Truly anything is possible!</li>
+                <li><h3>Botany</h3>Finally I have always had a passion for botany, and in recent days I have become enthralled by the process of genetically modifying plants. Though I do not see any direct human applications from this I am excited by the do-ability and wonder of genetics. I envision plants that could be more resilient, smell nicer or be more beautiful. Truly anything is possible!</li>
             </ol>
 
             <h2>Skills</h2>
+            
             <h3>Digital</h3>
             <ul>
                 <li><b>Coding:</b> HTML, CSS, Astro, Google Sheets, Intermediate Python</li>
