--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,8 +9,8 @@ const pageTitle = 'Contact';
     <body>
         <div class="main-content">
             <h1>{pageTitle}</h1>
-            <p>If you would like to get in touch, please email me at: <a href="mailto: ruby.mykkanen@gmail.com" class = "link">ruby.mykkanen@gmail.com</a></p>
-            <p>Or follow me on <a href="link to my insta" class = "link">Instagram</a> to keep updated!</p>
+            <p>Don't hesitate to reach out with ideas, oppourtunities, or questions!</p>
+            <p>To get in touch, please email me at <a href="mailto: ruby.mykkanen@gmail.com" class = "link">ruby.mykkanen@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/ruby-mykkanen-a4b18035b/" class = "link">LinkedIn</a>.</p>
         </div>
     </body>
 </Layout>  
