--- a/src/content/projects/[slug].astro
+++ b/src/content/projects/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, render } from 'astro:content';
-import MarkdownPostLayout from '../layouts/MarkdownPostLayout.astro';
+import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('projects');
@@ -13,6 +13,6 @@ export async function getStaticPaths() {
 const { post } = Astro.props;
 const { Content } = await render(post);
 ---
-<MarkdownPostLayout frontmatter={{ ...post.data, slug: post.id }}>
+<MarkdownPostLayout frontmatter={{ post: post.data }}>
   <Content />
 </MarkdownPostLayout>
