--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,7 +52,7 @@ h1 {
 
 h2 {
   margin: 1rem 0;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   color: #ED5007;
@@ -79,6 +79,18 @@ li {
   margin: 0.5rem 0;
   font-family: 'Cutive Mono', monospace;
   color: #4A5759;
+}
+
+.resume-button {
+  background-color: #F8AE8C;
+  color: #FCF2EE;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  font-family: "abril fatface", serif;
+  font-size: 1rem;
+  text-decoration: none;
 }
 
 ::selection {
@@ -190,13 +202,12 @@ li {
 
 .link {
     text-decoration: none;
-    color: #96B098;
+    color: #2E3638;
     font-family: 'Cutive Mono', monospace;
 }
 
 .link:hover {
     color: #ED5007;
-    text-decoration: underline;
 }
 
 
@@ -337,8 +348,13 @@ html.dark {
   left: 0;
   width: 100%;
   padding: 0.0rem;
-  background-color: #ffffff75;
+  background-color: #F7F5F350;
   z-index: 10;    
+  transition: background-color 0.6s;
+}
+
+.header:hover{
+  background-color: #F7F5F3ee;
 }
 
 .logo-block {
