--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,8 +15,8 @@ const pageTitle = 'About Me';
             <div>
                 <h1>{pageTitle}</h1>
                 <p>As as student at MIT, my current goal is to learn as much as possible, and gain as much experience as I can. In the long term I hope to have experiences, connections and skills I necessary to build technology that can have a tangible and positive impact on society and human health.</p>
-                <p style="color: #96B098">Read more about me below, or perruse my resume for more information.</p>
-                <button class="resume-button"><a href="/RubyMykkanen_Resume_2024.pdf" class="link" download>Download Resume</a></button>
+                <p style="color: #96B098">Read more about me below, or perruse my resume for more information</p>
+                <button class="resume-button"><a href="/RubyMykkanen_Resume.pdf" class="link" download>Download Resume</a></button>
             </div>
 
         </div>
