--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,31 +52,36 @@ h1 {
 
 h2 {
   margin: 1rem 0;
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   color: #ED5007;
 }
 h3 {
   margin: 0.5rem 0;
-  font-size: 1.2rem;
+  font-size: 1.7rem;
   color: #96B098;
   font-family: 'Lato', sans-serif;
 }
 h4 {
   margin: 0.5rem 0;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  color:#710727;
   font-family: 'Lato', sans-serif;
 }
 
 p {
-  margin: 0.5rem 0;
+  margin: 1.5rem 0rem;
+  line-height: 2rem;
+  font-size: 1.1rem;
   font-family: 'Cutive Mono', monospace;
   color: #2F3537;
 }
 
 li {
-  margin: 0.5rem 0;
+  margin: 0.9rem 0rem;
+  line-height: 2rem;
+  font-size: 1.1rem;
   font-family: 'Cutive Mono', monospace;
   color: #4A5759;
 }
@@ -227,8 +232,7 @@ li {
 }
 
 .social-link a:hover {
-  color: #4A5759;
-  text-decoration: underline;
+  color: #ED5007;
 }
 
 img {
