Fixing the Projects!!!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,5 +29,7 @@ import ProfileImage from '../assets/Profile.jpg';
 
 		</div>
 	</div>
+	<a href="/projects/project-1/" class="link">see my stuff</a>
+
 
 </Layout>
