--- a/src/components/ProjectPost.astro
+++ b/src/components/ProjectPost.astro
@@ -1,12 +1,4 @@
 ---
-const { frontmatter } = Astro.props;
-const url = `../projects/${frontmatter.slug}`;
+const { title, url } = Astro.props
 ---
-<li class="project-preview">
-    <a href={url}>
-        <img src={frontmatter.image.url} alt={frontmatter.image.alt} class='Project_image'/>
-        <h3>{frontmatter.title}</h3>
-    </a>
-    <p> Published: {frontmatter.pubDate}</p>
-    
-</li>
+<li><a href={url}>{title}</a></li>
