--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,21 +1,17 @@
 ---
-import { getCollection } from "astro:content";
 import Layout from '../layouts/Layout.astro';
 import ProjectPost from '../components/ProjectPost.astro';
-
-const pageTitle = 'My Projects';
-const allPosts = await getCollection("projects");
+import { getCollection } from "astro:content";
+const pageTitle = 'Projects';
+const allProjects = await getCollection("ProjectIndex");
 ---
 
 <Layout>
 
     <div class="main-content">
         <h1>{pageTitle}</h1>
-        <ul class="project-list">
-            {allPosts.map(
-                (post) => <ProjectPost frontmatter={post.data}/>
-                )
-                }
-         </ul>
+        <div>
+            {allProjects.map((project: any) => <ProjectPost url={`/projects/${project.id}/`} title={project.data.title} />)}
+        </div>
     </div>
 </Layout>
