--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,16 +1,19 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from '../../layouts/Layout.astro';
-const allPosts = await getCollection("projects");
-const tags = [...new Set(allPosts.map((post: any) => post.data.tags).flat())];
+const allProjects = await getCollection("ProjectIndex");
+const tags = [...new Set(allProjects.map((project: any) => project.data.tags).flat())];
 const pageTitle = 'Tags';
 ---
 
 <Layout pageTitle={pageTitle}>
-    <div class="tags">
-        {tags.map((tag) => (
-        <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
-        ))}
-    </div>
+    <body>
+        <h3>Browse my projects based on category!</h3>
+            <div class="tag-list">
+                {tags.map((tag) => (
+                <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+                ))}
+            </div>
+    </body>
 </Layout>
 
