--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,17 +3,16 @@ import Layout from '../layouts/Layout.astro';
 const { frontmatter } = Astro.props;
 ---
 <Layout pageTitle={frontmatter.title}>
-    <p>Slug: {frontmatter.slug}</p>
-    <p>Collaborators: {frontmatter.author}, {frontmatter.collaborators}</p>
-    <p>Published on {frontmatter.pubDate.toLocaleDateString()}</p>
-    <p>Project Completed on {frontmatter.completionDate}</p>
-    <p>{frontmatter.abstract}</p>
-    <img src={frontmatter.image.url} alt={frontmatter.image.alt} class='Project_image'/>
-    <p>Tags: {frontmatter.tags.join(', ')}</p>
+    <div class = "project-header">  
+        <img src={frontmatter.image.url} alt={frontmatter.image.alt} class='Project_image'/>
+        <div>
+        <p>Collaborators: {frontmatter.author}, {frontmatter.collaborators}</p>
+        <p>Project Completed on {frontmatter.completionDate}</p>
+        </div>
+    </div>
     <article>
         <slot />
     </article>
-
     <div class="tags">
         {frontmatter.tags.map((tag: string) => (
         <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
