--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -5,7 +5,8 @@ import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
 export async function getStaticPaths() {
   const projects = await getCollection('ProjectIndex');
   return projects.map(project => ({
-    params: { slug: project.id }, props: { project },
+    params: { slug: project.id }, 
+    props: { project },
   }));
 }
 
