tags pages updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import ProfileImage from '../assets/Profile.jpg';
 
 		</div>
 	</div>
-	<a href="/projects/project-1/" class="link">see my stuff</a>
+	<a href="/projects/" class="link">see my stuff</a>
 
 
 </Layout>
