--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ const pageTitle = 'About Me';
 <Layout>
 
     <body>
-        <div style="margin-bottom: 100px;", class="about-block">
+        <div style="margin-bottom: 50px;", class="about-block">
             <div><img src={ProfileImage.src} alt="Ruby Mykkanen" class="profile-image"/></div>
             <div>
                 <h1>{pageTitle}</h1>
@@ -20,30 +20,68 @@ const pageTitle = 'About Me';
             </div>
 
         </div>
+
+        <div class="toc-box">
+            <h4 class="toc-header">Contents</h4>
+            <div class="toc-links">
+                <a href="#academic-interests" class="link">Academic Interests</a>
+                <a href="#skills" class="link">Skills</a>
+                <a href="#groups" class="link">Groups</a>
+                <a href="#future" class="link">future</a>
+                <a href="/projects/" class="link">Projects</a>
+            </div>
+        </div>
+
         <div class = "main-content">
 
-            <h2>Academic Interests</h2>
-            <ol style="margin-bottom: 100px;">
-                <li><h3>Bioprinting</h3>I am currently interested in synthetic biology, tissue engineering and bioprinting, particularly the technologies that facilitate this. I think the future of organ transplants is going to be synthetic printed organs, and I cannot wait to help be a part of this process. </li>
-                <li><h3>Prosthetics</h3>Another Interest of mine is human prosthetics. I wonder how the areas of bio-printing and tissue engineering can be applied in this area. I see a future where synthetic human tissues can be incorporated into prosthetics to increase their realism, sensitivity and effectiveness.</li>
-                <li><h3>Botany</h3>Finally I have always had a passion for botany, and in recent days I have become enthralled by the process of genetically modifying plants. Though I do not see any direct human applications from this I am excited by the do-ability and wonder of genetics. I envision plants that could be more resilient, smell nicer or be more beautiful. Truly anything is possible!</li>
-            </ol>
 
-            <h2>Skills</h2>
+            <div class = "academic-interests", id = "academic-interests">
+                <h2>Academic Interests</h2>
+                <ol style="margin-bottom: 100px;">
+                    <li><h3>Bioprinting</h3>I am currently interested in synthetic biology, tissue engineering and bioprinting, particularly the technologies that facilitate this. I think the future of organ transplants is going to be synthetic printed organs, and I cannot wait to help be a part of this process. </li>
+                    <li><h3>Prosthetics</h3>Another Interest of mine is human prosthetics. I wonder how the areas of bio-printing and tissue engineering can be applied in this area. I see a future where synthetic human tissues can be incorporated into prosthetics to increase their realism, sensitivity and effectiveness.</li>
+                    <li><h3>Botany</h3>Finally I have always had a passion for botany, and in recent days I have become enthralled by the process of genetically modifying plants. Though I do not see any direct human applications from this I am excited by the do-ability and wonder of genetics. I envision plants that could be more resilient, smell nicer or be more beautiful. Truly anything is possible!</li>
+                </ol>
+            </div>
+
+            <div class = "skills", id = "skills">
+
+                <h2>Skills</h2>
             
-            <h3>Digital</h3>
-            <ul>
-                <li><b>Coding:</b> HTML, CSS, Astro, Google Sheets, Intermediate Python</li>
-                <li><b>Cad and 3-D design:</b> FreeCad, 3-D filament Printing Slicing Software, Blender</li>
-                <li><b>Graphic design:</b> Autodesk Sketchbook, Pixelmator Pro, Adobe Photoshop, Canva, Google Slides</li>
-            </ul>
-            <h3>Physical</h3>
-            <ul>
-                <li><b>Power tools:</b> Drill, Table Saw, Miter Saw,  Belt Sander, Dremel, Soldering Iron, Angle Grinder, Sewing Machine, Laser Cutter</li>
-                <li><b>Artistic:</b> Mural Painting, Acrylic Painting, Watercolor, Portrait Sketching, Digital Drawing, linocut Print Carving, Oragami</li>
-                <li><b>Music:</b> Bb Clarinet (8 years experience), Eb Clarinet, Bass Clarinet, Trombone, Bassoon, Arranging for Band and Acapella, Singing, Beginner: Piano, Guitar, Trumpet, Oboe</li>
-                <li><b>Other:</b> 3-D printing, Insect Pinning and Catching, Growing Tropical Plants, Bonsai Training</li>
-            </ul>
+                <h3>Digital</h3>
+                <ul>
+                    <li><b>Coding:</b> HTML, CSS, Astro, Google Sheets, Intermediate Python</li>
+                    <li><b>Cad and 3-D design:</b> FreeCad, 3-D filament Printing Slicing Software, Blender</li>
+                    <li><b>Graphic design:</b> Autodesk Sketchbook, Pixelmator Pro, Adobe Photoshop, Canva, Google Slides</li>
+                </ul>
+                <h3>Physical</h3>
+                <ul>
+                    <li><b>Power tools:</b> Drill, Table Saw, Miter Saw,  Belt Sander, Dremel, Soldering Iron, Angle Grinder, Sewing Machine, Laser Cutter</li>
+                    <li><b>Artistic:</b> Mural Painting, Acrylic Painting, Watercolor, Portrait Sketching, Digital Drawing, linocut Print Carving, Oragami</li>
+                    <li><b>Music:</b> Bb Clarinet (8 years experience), Eb Clarinet, Bass Clarinet, Trombone, Bassoon, Arranging for Band and Acapella, Singing, Beginner: Piano, Guitar, Trumpet, Oboe</li>
+                    <li><b>Other:</b> 3-D printing, Insect Pinning and Catching, Growing Tropical Plants, Bonsai Training</li>
+                </ul>
+            </div>
+
+            <div class = "groups", id = "groups">
+
+                <h2>Groups</h2>
+
+                <h3>MIT Wind Ensemble</h3>
+                <p>I am a member of the MIT Wind Ensemble, where I play clarinet</p>
+
+                <h3>Choralaries of MIT</h3>
+                <p>I am a member of the Choralaries of MIT, an acapella group on campus</p>
+
+                <h3>Varanasi group researcher</h3>
+                <p>I am a member of the Varanasi research group, where I help design and build scientific instruments for biological study</p>
+            </div>
+
+            <div class = "future", id = "future">
+
+                <h2>Future Plans</h2>
+                <p>In the future I hope to gain research experience in bioprinting and tissue engineering, as well as internships in biotech companies. I also hope to continue developing my skills in coding, 3-D design and scientific instrument design. Long term I hope to work in biotech research and development, particularly in the area of bioprinting and synthetic organs.</p>
+            </div>
 
         </div>
     </body>
